--- a/styles/_show.styl
+++ b/styles/_show.styl
@@ -1,10 +1,8 @@
 .show
-  border-right 1px solid grey
-  border-bottom 1px solid grey
-  border-left 10px solid grey
-  background lightgrey
   position relative
   display flex
+  width: 33%
+  min-height: 450px
   @media (max-width: 650px)
     flex 1 0 auto
   a
@@ -45,7 +43,7 @@
     color gray3
     font-size 11px
   &__title
-    color black
+    color white
     font-size 1.5rem
     margin 0
   &__date
@@ -55,14 +53,13 @@
     font-size 1.2rem
 
 .show-wrap
-  background white
   display flex
   flex-wrap wrap
 
 .showList
-  width 38%
   display flex
-  flex-direction column
+  flex-direction row
+  flex-flow wrap
   @media (max-width: 650px)
     height 300px
     width 100%
