--- a/styles/_show.styl
+++ b/styles/_show.styl
@@ -1,10 +1,12 @@
 .show
   position relative
   display flex
+  flex-direction column
   width: 33%
   min-height: 450px
   @media (max-width: 650px)
-    flex 1 0 auto
+    width: 100%
+    // flex 1 0 auto
   a
     flex 1 1 auto
     padding 10px
@@ -60,20 +62,13 @@
   display flex
   flex-direction row
   flex-flow wrap
-  @media (max-width: 650px)
-    height 300px
-    width 100%
-    overflow-x auto
-    overflow-y scroll
 
 .showNotes
   position sticky
   top 102px
-  height calc(100vh - 102px)
-  overflow-y scroll
   padding 2rem
-  width 62%
   font-size 1.5rem
+  color white
   @media (max-width: 650px)
     width 100%
   .button
